--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
@@ -35,8 +34,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.roomorama:caldroid:3.0.1'
-    compile 'com.google.firebase:firebase-messaging:9.0.0'
-    compile 'com.google.android.gms:play-services-maps:9.0.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
 
 /*compile 'com.github.npanigrahy:Custom-Calendar-View:v1.0'*//**/
