--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    compile project(':gcm')
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.zxing:core:2.0'
     compile 'commons-io:commons-io:2.4'
@@ -36,6 +36,11 @@ dependencies {
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile project(':twitter4j-core-3.0.5')
 }
 apply plugin: 'com.google.gms.google-services'
 
