--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
             <!--android:exported="true" />-->
         <activity android:name=".Activities.FacebookLogin"
             android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.AddCardActivity"/>
+        <activity android:name=".Activities.CardShowActivity"/>
 
 
     </application>
